# dropbear

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  cbindgen.toml  expanded_model.rs  settings.gradle.kts
.cargo/: .config.toml  (+1 more)
crates/currawong/: Cargo.toml  README.md
crates/currawong/src/: cli.rs  main.rs
crates/currawong/src/commands/: inspect.rs  mod.rs  pack.rs  plugin.rs  unpack.rs
crates/dropbear-engine/: Cargo.toml  build.rs
crates/dropbear-engine/src/: animation.rs  asset.rs  attenuation.rs  billboarding.rs  bind_groups.rs  buffer.rs  camera.rs  colour.rs  debug.rs  egui_renderer.rs  entity.rs  features.rs  graphics.rs  input.rs  lib.rs  lighting.rs  mipmap.rs  model.rs  multisampling.rs  panic.rs  resources.rs  scene.rs  shader.rs  sky.rs  texture.rs  utils.rs
crates/dropbear-engine/src/pipelines/: animation.rs  builder.rs  globals.rs  hdr.rs  light_cube.rs  mod.rs  shader.rs
crates/dropbear-engine/src/pipelines/shaders/: blit.wgsl  dropbear.slang  light.slang  light.wgsl  shader.wgsl
crates/dropbear-engine/src/procedural/: cube.rs  mod.rs  plane.rs
crates/dropbear-engine/src/shaders/: basic.wgsl  billboard.wgsl  blit.slang  dropbear.slang  equirectangular.wgsl  hdr.wesl  hdr.wgsl  light.slang  mask.wesl  mip_generator.wgsl  mipmap.wgsl  shader.wesl  shader.wgsl  sky.wgsl
crates/dropbear-engine/src/shaders/common/: animation.wesl  constants.wesl  environment.wesl  light.wesl  material.wesl
crates/dropbear_future-queue/: Cargo.toml  README.md
crates/dropbear_future-queue/src/: lib.rs
crates/euca-runner/: Cargo.toml  README.md
crates/euca-runner/src/: main.rs
crates/eucalyptus-exports/: Cargo.toml  README.md  build.rs
crates/eucalyptus-exports/src/: animation.rs  asset.rs  camera.rs  component.rs  debug.rs  engine.rs  entity.rs  input.rs  lib.rs  lighting.rs  math.rs  mesh.rs  primitives.rs  properties.rs  scene.rs  transform.rs
crates/eucalyptus-exports/src/asset/: model.rs  texture.rs
crates/eucalyptus-exports/src/asset/model/: ty.rs
crates/eucalyptus-exports/src/physics/: collider.rs  kcc.rs  mod.rs  physics.rs  rigidbody.rs
crates/eucalyptus-exports/src/scripting/: mod.rs
crates/eucalyptus-exports/src/utils/: mod.rs  ty.rs
crates/kino-ui/: Cargo.toml  README.md
crates/kino-ui/src/: asset.rs  camera.rs  lib.rs  math.rs  rendering.rs  resp.rs  tree.rs  windowing.rs
crates/kino-ui/src/rendering/: batching.rs  pipeline.rs  text.rs  texture.rs  vertex.rs
crates/kino-ui/src/shaders/: ui.wgsl
crates/kino-ui/src/widgets/: layout.rs  mod.rs  rect.rs  shorthand.rs  text.rs
crates/magna-carta/: Cargo.toml  README.md
crates/magna-carta/src/: lib.rs  main.rs
crates/magna-carta/src/generator/: jvm.rs  mod.rs  native.rs
crates/redback-runtime/: Cargo.toml  README.md
crates/redback-runtime/src/: command.rs  input.rs  lib.rs  scene.rs
crates/slank/: Cargo.toml  README.md  build.rs
crates/slank/src/: compiled.rs  lib.rs  utils.rs
crates/slank/test/: light.slang
eucalyptus-core/: Cargo.toml  README.md  build.rs
eucalyptus-core/src/: asset.rs  camera.rs  command.rs  config.rs  engine.rs  entity.rs  hierarchy.rs  input.rs  lib.rs  lighting.rs  mesh.rs  physics.rs  properties.rs  ptr.rs  runtime.rs  scene.rs  scripting.rs  spawn.rs  states.rs  transform.rs  types.rs  utils.rs  window.rs
eucalyptus-core/src/asset/: texture.rs
eucalyptus-core/src/input/: gamepad.rs
eucalyptus-core/src/physics/: collider.rs  kcc.rs  rigidbody.rs
eucalyptus-core/src/physics/collider/: collidergroup.rs  shader.rs
eucalyptus-core/src/physics/kcc/: character_collision.rs
eucalyptus-core/src/scene/: loading.rs  scripting.rs
eucalyptus-core/src/scripting/: jni.rs  native.rs  result.rs
eucalyptus-core/src/scripting/jni/: exports.rs  utils.rs
eucalyptus-core/src/scripting/jni/exports/: DropbearEngineNative.rs  InputStateNative.rs  JNINative.rs  PhysicsNative.rs  SceneNative.rs
eucalyptus-core/src/scripting/jni/exports/components/: CameraNative.rs  ColliderNative.rs  CustomPropertiesNative.rs  EntityTransformNative.rs  HierarchyNative.rs  LabelNative.rs  MeshRendererNative.rs  RigidBodyNative.rs  mod.rs
eucalyptus-core/src/scripting/native/: exports.rs  sig.rs  types.rs  utils.rs
eucalyptus-core/src/scripting/native/exports/: dropbear_common.rs  dropbear_engine.rs  dropbear_input.rs  dropbear_math.rs  dropbear_scene.rs  dropbear_utils.rs
eucalyptus-core/src/scripting/native/exports/components/: dropbear_camera.rs  dropbear_entitytransform.rs  dropbear_hierarchy.rs  dropbear_label.rs  dropbear_meshrenderer.rs  dropbear_properties.rs  mod.rs
eucalyptus-core/src/utils/: option.rs
eucalyptus-editor/: Cargo.toml
eucalyptus-editor/src/: about.rs  build.rs  command.rs  lib.rs  main.rs  menu.rs  physics.rs  process.rs  signal.rs  spawn.rs  stats.rs  utils.rs
eucalyptus-editor/src/debug/: window.rs
eucalyptus-editor/src/editor/: component.rs  dock.rs  input.rs  mod.rs  scene.rs  settings.rs
eucalyptus-editor/src/editor/settings/: editor.rs  project.rs
eucalyptus-editor/src/physics/: collider.rs  kcc.rs  rigidbody.rs
eucalyptus-editor/src/runtime/: command.rs  input.rs  mod.rs  scene.rs
example/surface-nets-plugin/: Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
example/surface-nets-plugin/crate/: build.rs
example/surface-nets-plugin/crate/src/: component.rs  exports.rs  lib.rs  surface_nets.rs
example/surface-nets-plugin/include/: surface_nets_plugin.h
example/surface-nets-plugin/scripting/: surface_nets_plugin.def
example/surface-nets-plugin/scripting/commonMain/io/github/tirbofish/surfaceNets/: SurfaceNets.kt
example/surface-nets-plugin/scripting/jvmMain/java/io/github/tirbofish/surfaceNets/: SurfaceNetsDylibLoader.java  SurfaceNetsNative.java
example/surface-nets-plugin/scripting/jvmMain/kotlin/io/github/tirbofish/surfaceNets/: SurfaceNets.jvm.kt
example/surface-nets-plugin/scripting/nativeMain/kotlin/io/github/tirbofish/surfaceNets/: SurfaceNets.native.kt
redback-runtime/: Cargo.toml
redback-runtime/src/: command.rs  debug.rs  input.rs  lib.rs  main.rs  scene.rs
(+594 files in other folders)
