[workspace]
package.version = "0.1.2"
package.edition = "2024"
package.license = "MIT OR Apache-2.0"
package.repository = "https://github.com/tirbofish/dropbear"
package.readme = "README.md"

resolver = "3"
members = [
    "dropbear-engine",
    "dropbear-macro",
    "dropbear-shader",
    "dropbear-traits",
    "dropbear_future-queue",
    "eucalyptus-core",
    "eucalyptus-editor",
    "magna-carta",
#    "redback-runtime"
]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
app_dirs2 = "2.5"
arboard = "3.6"
bincode = { version = "2.0", features = ["serde"] }
bytemuck = { version = "1.23", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
crossbeam-channel = "0.5"
dropbear-engine = { path = "dropbear-engine" }
egui = "0.33"
egui-toast = { version = "0.19" }
egui-wgpu = { version = "0.33" }
egui-winit = { version = "0.33" }
egui_dnd = "0.14"
egui_dock = { version = "0.18", features = ["serde"] }
egui_extras = { version = "0.33", features = ["all_loaders"] }
env_logger = "0.11"
futures = "0.3"
gilrs = "0.11"
git2 = { version = "0.20", features = ["vendored-openssl"] }
glam = { version = "0.30", features = ["serde", "mint"] }
hecs = { version = "0.10", features = ["serde"] }
log = "0.4"
log-once = "0.4"
model_to_image = "0.1"
once_cell = "1.21"
parking_lot = {version = "0.12", features = ["deadlock_detection"] }
rfd = "0.15"
ron = "0.11"
serde = { version = "1.0", features = ["derive"] }
spin_sleep = "1.3"
transform-gizmo-egui = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
wgpu = "27"
winit = { version = "0.30", features = [] }
zip = "6.0"
walkdir = "2.5"
rayon = "1.11"
backtrace = "0.3"
gltf = "1"
os_info = "3.12"
rustc_version_runtime = "0.3"
jni = { version = "0.21", features = ["invocation"] }
tree-sitter = "0.22" # must be kept as 0.22 because tree-sitter-kotlin has not been updated
tree-sitter-kotlin = "0.3"
libloading = "0.8"
indexmap = "2.11"
sha2 = "0.10"
wesl = "0.2"
dashmap = "6.1"
open = "5.3"
egui_plot = "0.34"
memory-stats = "1.2"
typetag = "0.2"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
egui_ltreeview = { version = "0.6", features = ["doc"] }
dyn-hash = "1.0"
semver = { version = "1.0", features = ["serde"] }
rapier3d = { version = "0.31", features = [ "simd-stable", "serde-serialize" ] }

[workspace.dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[profile.dev]
opt-level = 3
debug = true
codegen-units = 16
incremental = true
lto = false

# makes the debug builds so much more faster
[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
