[package]
name = "eucalyptus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
dropbear-traits = { path = "../dropbear-traits" }
dropbear-macro = { path = "../dropbear-macro" }
magna-carta = { path = "../magna-carta" }

anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
dropbear-engine.workspace = true
egui-toast.workspace = true
egui.workspace = true
egui_dock.workspace = true
glam.workspace = true
hecs.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
ron.workspace = true
serde.workspace = true
winit.workspace = true
tokio.workspace = true
rayon.workspace = true
jni.workspace = true
sha2.workspace = true
libloading.workspace = true
crossbeam-channel.workspace = true
app_dirs2.workspace = true
log-once.workspace = true
rfd = { workspace = true, optional = true }
typetag.workspace = true
semver.workspace = true
rustc_version_runtime.workspace = true

[features]
default = []
# internal redback-runtime configurations because some stuff keep on enabling for JVM
runtime = []
# editor only stuff
editor = ["jvm", "rfd", "jvm_debug"]
# enabled scripttarget::jvm as an option 
jvm = []
# enables jdb
jvm_debug = ["jvm"]

[build-dependencies]
anyhow = "1.0"
app_dirs2 = "2.5"
