[package]
name = "eucalyptus-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "eucalyptus-editor"
readme = "README.md"

[dependencies]
eucalyptus-core = { path = "../eucalyptus-core", features = ["editor"] }
magna-carta = { path = "../magna-carta" }

anyhow.workspace = true
app_dirs2.workspace = true
bincode.workspace = true
bytemuck.workspace = true
dropbear-engine.workspace = true
egui-toast.workspace = true
egui.workspace = true
egui_dnd.workspace = true
egui_dock.workspace = true
egui_extras.workspace = true
gilrs.workspace = true
git2 = { workspace = true, features = ["vendored-openssl"]}
glam.workspace = true
hecs.workspace = true
log.workspace = true
log-once.workspace = true
model_to_image.workspace = true
parking_lot.workspace = true
transform-gizmo-egui.workspace = true
wgpu.workspace = true
winit.workspace = true
clap.workspace = true
walkdir.workspace = true
zip.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
futures.workspace = true
libloading.workspace = true
indexmap.workspace = true
open.workspace = true
rustc_version_runtime.workspace = true
egui_plot.workspace = true
memory-stats.workspace = true
env_logger.workspace = true
colored.workspace = true
chrono.workspace = true
egui_ltreeview.workspace = true
ron.workspace = true
rfd.workspace = true
semver.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[features]
default = ["editor"]
editor = ["eucalyptus-core/editor"]

[build-dependencies]
anyhow.workspace = true
app_dirs2.workspace = true
zip.workspace = true
