[package]
name = "redback-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
dropbear-engine = { path = "../dropbear-engine" }
eucalyptus-core = { path = "../eucalyptus-core" }

anyhow.workspace = true
log.workspace = true
app_dirs2.workspace = true
tokio.workspace = true
chrono.workspace = true
env_logger.workspace = true
colored.workspace = true
parking_lot.workspace = true
bincode.workspace = true
hecs.workspace = true
bytemuck.workspace = true
log-once.workspace = true