[package]
name = "redback-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
dropbear-engine = { path = "../dropbear-engine" }
eucalyptus-core = { path = "../eucalyptus-core", features = ["runtime"], default-features = false }

anyhow.workspace = true
log.workspace = true
app_dirs2.workspace = true
tokio.workspace = true
chrono.workspace = true
env_logger.workspace = true
colored.workspace = true
parking_lot.workspace = true
bincode.workspace = true
ron.workspace = true
hecs.workspace = true
bytemuck.workspace = true
log-once.workspace = true
egui-wgpu.workspace = true
rustc_version_runtime.workspace = true
winit.workspace = true

[features]
default = ["eucalyptus-core/runtime"]

# enable this to allow for JVM support
jvm = ["eucalyptus-core/jvm"]

# enable this to enable JVM support and allow for debugging through sockets.
# WARN: ENSURE THIS IS NOT ENABLED ON DEBUG
jvm_debug = ["eucalyptus-core/jvm_debug"]