[package]
name = "dropbear-engine"
description = "A game engine made by tirbofish. Thats really it..."

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
dropbear_future-queue = { path = "../dropbear_future-queue" }
dropbear-traits = { path = "../dropbear-traits" }
dropbear-macro = { path = "../dropbear-macro" }

anyhow.workspace = true
app_dirs2.workspace = true
bytemuck.workspace = true
chrono.workspace = true
colored.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui.workspace = true
env_logger.workspace = true
futures.workspace = true
gilrs.workspace = true
glam.workspace = true
log.workspace = true
log-once.workspace = true
serde.workspace = true
spin_sleep.workspace = true
wgpu.workspace = true
winit.workspace = true
hecs.workspace = true
parking_lot.workspace = true
gltf.workspace = true
rayon.workspace = true
backtrace.workspace = true
os_info.workspace = true
rustc_version_runtime.workspace = true
ron.workspace = true
dashmap.workspace = true
typetag.workspace = true
postcard.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd.workspace = true

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
