[package]
name = "dropbear-engine"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
dropbear_future-queue = { path = "../dropbear_future-queue" }
dropbear-macro = { path = "../dropbear-macro" }
dropbear-utils = { path = "../dropbear-utils" }
slank = { path = "../slank", features = ["download-slang", "use-wgpu"] }

anyhow.workspace = true
app_dirs2.workspace = true
bytemuck.workspace = true
chrono.workspace = true
colored.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui.workspace = true
env_logger.workspace = true
futures.workspace = true
gilrs.workspace = true
glam.workspace = true
log.workspace = true
log-once.workspace = true
serde.workspace = true
spin_sleep.workspace = true
wgpu = { workspace = true, features = ["serde"] }
winit.workspace = true
hecs.workspace = true
parking_lot.workspace = true
gltf.workspace = true
rayon.workspace = true
backtrace.workspace = true
os_info.workspace = true
rustc_version_runtime.workspace = true
ron.workspace = true
dashmap.workspace = true
typetag.workspace = true
postcard.workspace = true
pollster.workspace = true
image = {workspace = true, features = ["serde"]}
puffin.workspace = true
bitflags.workspace = true
puffin_http.workspace = true
uuid.workspace = true
float-derive.workspace = true
rkyv.workspace = true
bevy_mikktspace.workspace = true
wesl.workspace = true
egui_extras.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd.workspace = true

[build-dependencies]
slank = { path = "../slank", features = ["download-slang"] }
naga.workspace = true
anyhow.workspace = true
wesl.workspace = true
