[package]
name = "eucalyptus-exports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
authors.workspace = true
description = "Deals with exports of functions"

[lib]
name = "eucalyptus_core" # keep the name for legacy reasons (it works as is, dont change please)
crate-type = ["cdylib"]

[dependencies]
dropbear-engine = { path = "../dropbear-engine" }
eucalyptus-core = { path = "../eucalyptus-core" }
dropbear-macro = { path = "../dropbear-macro" }

jni.workspace = true
hecs.workspace = true
glam.workspace = true
crossbeam-channel.workspace = true

[build-dependencies]
goanna-gen = { path = "../goanna-gen" }