[package]
name = "kino-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
dropbear-utils = { path = "../dropbear-utils" }

wgpu.workspace = true
parking_lot.workspace = true
glam.workspace = true
bytemuck.workspace = true
image.workspace = true
anyhow.workspace = true
log.workspace = true
winit.workspace = true
glyphon.workspace = true
serde = { workspace = true, optional = true}
typetag = { workspace = true, optional = true}

[features]
ser = ["serde", "typetag"]
