[package]
name = "redback-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
dropbear-engine = { path = "../dropbear-engine" }
eucalyptus-core = { path = "../eucalyptus-core", features = ["runtime"], default-features = false }
kino-gui = { path = "../kino-gui" }

anyhow.workspace = true
log.workspace = true
app_dirs2.workspace = true
tokio.workspace = true
chrono.workspace = true
env_logger.workspace = true
colored.workspace = true
parking_lot.workspace = true
postcard.workspace = true
ron.workspace = true
hecs.workspace = true
bytemuck.workspace = true
log-once.workspace = true
winit.workspace = true
serde.workspace = true
crossbeam-channel.workspace = true
gilrs.workspace = true
futures.workspace = true
glam.workspace = true
wgpu.workspace = true
egui.workspace = true

[features]
debug = []
jvm = []