[package]
name = "slank"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["graphics", "shader", "slang", "wgpu", "vulkan"]
authors.workspace = true
description = "A build.rs slang shader compiler"

[dependencies]

wgpu = { workspace = true, optional = true }
tempfile.workspace = true
anyhow.workspace = true

[features]
# this feature downloads the slang compiler for the correct operating system and stores it for later.
download-slang = []

# allows for the wgpu dependency to be available.
use-wgpu = ["wgpu/default", "wgpu/spirv"]

[build-dependencies]
dirs = "6.0"
reqwest = { version = "0.13", features = ["blocking", "json"] }
zip = "7.2"
flate2 = "1.1"
tar = "0.4"
anyhow.workspace = true
serde = { workspace = true }